<resources>
    <string name="schermata_home">Schermata HOME</string>
    <string name="schermata_profilo">Schermata PROFILO</string>
    <string name="schermata_quiz">Schermata QUIZ</string>
    <string name="schermata_impostazioni">Schermata IMPOSTAZIONI</string>
    <string name="livello_di_stress">Livello di Stress:</string>
    <string name="aumenta_stress">AUMENTA STRESS</string>
    <string name="app_name">SmokeShield</string>
    <string name="welcome_message">Pronto a resistere?</string>
    <string name="select_difficulty">Scegli l\'intensità della crisi:</string>
    <string name="diff_easy">Facile (5 min)</string>
    <string name="diff_hard">Difficile (10 min)</string>
    <string name="btn_sos">SOS</string>
    <string name="timer_placeholder">05:00</string>
    <string name="question_placeholder">Caricamento in corso...</string>
    <string name="answer_a">...</string>
    <string name="answer_b">...</string>
    <string name="answer_c">...</string>
    <string name="answer_d">...</string>
    <string name="profile_title">Il tuo Scudo</string>
    <string name="stats_crises_won">Crisi superate: 0</string>
    <string name="stats_time_saved">Tempo guadagnato: 0 min</string>
    <string name="history_title">Storico Battaglie</string>
    <string name="titolo_impostazioni">Impostazioni</string>
    <string name="titolo_profilo">Profilo</string>
    <string name="titolo_gioco">Gioco</string>
    <string name="settings_title">Impostazioni</string>
    <string name="btn_demo_notification">Demo: Notifica (1 Min)</string>
    <string name="btn_logout">Disconnetti (Logout)</string>
    <string name="punteggio_0">Punteggio: 0</string>
    <string name="punteggio_format">Punteggio: %1$d</string>
    <string name="diff_test">Test (1 min)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smokeshield">SmokeShield</string>
    <string name="accedi_per_resistere_alla_crisi">Accedi per resistere alla crisi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accedi_o_registrati">ACCEDI O REGISTRATI</string>
    <string name="oppure">OPPURE</string>
    <string name="accedi_con_google">Accedi con Google</string>
    <string name="inizia_il_percorso">INIZIA IL PERCORSO</string>
    <string name="la_tua_motivazione_es_salute_soldi_figli">La tua motivazione (es. Salute, Soldi, Figli)</string>
    <string name="sigarette_al_giorno_in_media">Sigarette al giorno (in media)</string>
    <string name="da_quanti_anni_fumi">Da quanti anni fumi?</string>
    <string name="per_aiutarti_al_meglio_durante_le_crisi_abbiamo_bisogno_di_conoscerti">Per aiutarti al meglio durante le crisi, abbiamo bisogno di conoscerti.</string>
    <string name="benvenuto_a_bordo">Benvenuto a bordo</string>


</resources>