<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.smokeshield.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.smokeshield.QuizFragment"
        android:label="@string/titolo_gioco"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.smokeshield.ProfileFragment"
        android:label="@string/titolo_profilo"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.smokeshield.SettingsFragment"
        android:label="@string/titolo_impostazioni"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.smokeshield.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>