<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".QuizFragment">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/timer_placeholder"
                android:textSize="56sp"
                android:textStyle="bold"
                android:textColor="#D32F2F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/punteggio_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#4CAF50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_timer" />
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/question_placeholder"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_timer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                app:layout_constraintVertical_bias="0.901">

                <Button
                    android:id="@+id/btn_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/answer_a" />

                <Button
                    android:id="@+id/btn_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/answer_b" />

                <Button
                    android:id="@+id/btn_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/answer_c" />

                <Button
                    android:id="@+id/btn_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/answer_d" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_termina_ora"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="TERMINA ORA"
                android:textColor="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>